Java-DSL/DslCake/src/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import java.util.ArrayList;
import java.util.LinkedList;
import java.io.Reader;

import java.lang.Integer;
import cakeelement.Layer;

public class Parser implements ParserConstants {
        protected static ArrayList<String> opGroup;
        protected static String cakeType;
        protected static ArrayList<String> keyPairList;
        protected static ArrayList<String> layerKeyPairList;

        protected static LinkedList<Layer> layerList;

        public Parser(String s) {
                this((Reader)(new java.io.StringReader(s)));

                opGroup          = new ArrayList<String>();
                keyPairList      = new ArrayList<String>();
                layerKeyPairList = new ArrayList<String>();
                layerList        = new LinkedList<Layer>();
        }

        public static void main(String[] args) throws Exception {
                //Exp result = new Parser(new java.io.StringReader(args[0])).S();
                Exp result = new Parser(args[0]).S();

                System.out.println(result);
                System.out.println("Cake Type: " + cakeType);

                System.out.println(keyPairList);
//		System.out.println(layerKeyPairList);
                for (Layer layer : layerList) {
                        System.out.println("layer.position = " + layer.position);
                        System.out.println("layer.diameter = " + layer.diameter);
                        System.out.println("layer.ingredientList = " + layer.ingredientList);
                        System.out.println("layer.hasCream = " + layer.hasCream);
                }
        }

  static final public Exp S() throws ParseException {
    trace_call("S");
    try {
Exp e;
      e = DefineObj();
      jj_consume_token(0);
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("S");
    }
}

//Exp E(): {Exp e1; Exp e2;}
//{
//  e1=T() ("+" e2=T() {e1 = new BinaryExp("+", e1, e2);} )* {return e1;}
//}
//
//Exp T(): {Exp e1; Exp e2;}
//{
//  e1=NumToken() ("*" e2=F() {e1 = new BinaryExp("*", e1, e2);} )* {return e1;}
//}
  static final public Exp DefineObj() throws ParseException {
    trace_call("DefineObj");
    try {
Token e1; Exp e2;
      jj_consume_token(COMMAND);
      e1 = jj_consume_token(CAKETYPE);
Parser.cakeType = e1.toString();
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          e2 = KeyPair();
        } else if (jj_2_2(2)) {
          e2 = Layer();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        if (jj_2_3(2)) {
          ;
        } else {
          break label_1;
        }
      }
{if ("" != null) return e2;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("DefineObj");
    }
}

//Exp Struct(): { Token e1; Exp e2; }
//{
//	<STRUCTKEYWORD> "=" e2=StructObjAttr() {return e2;} 
//}
//
//Exp StructObjAttr(): { }
//
  static final public 
Exp Layer() throws ParseException {
    trace_call("Layer");
    try {
Token e1; Exp e2;
      e1 = jj_consume_token(STRUCTKEYWORD);
      label_2:
      while (true) {
        e2 = LayerKeyPair();
        if (jj_2_4(2)) {
          ;
        } else {
          break label_2;
        }
      }
{if ("" != null) return new Str(e1.toString() + ":" + e2.toString());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Layer");
    }
}

//Exp Layer(): { Token e1; Exp e2; }
//{
//	e1="LAYER" e2=LayerKeyPair() { return new Str(e1.toString() + ":" + e2.toString());}
//}

//Exp LayerKeyPair(): { Token e1; Exp e2;}
//{
//	e1=<LAYERATTR> "=" e2=StrToken() {Parser.layerKeyPairList.add(e1.toString() + ":" + e2.toString()); return new Str(e1.toString() + ":" + e2.toString());}
//}
  static final public 
Exp LayerKeyPair() throws ParseException {
    trace_call("LayerKeyPair");
    try {
Exp e1;
layerList.add(new Layer());
      e1 = LayerPosition();
      LayerHasCream();
      LayerIngredient();
      LayerDiameter();
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("LayerKeyPair");
    }
}

  static final public Exp LayerPosition() throws ParseException {
    trace_call("LayerPosition");
    try {
Token e1; Exp e2;
      //	e1=<LAYERPOSITION> "=" e2=StrToken() {Parser.layerKeyPairList.add(e1.toString() + ":" + e2.toString()); return new Str(e1.toString() + ":" + e2.toString());}
              e1 = jj_consume_token(LAYERPOSITION);
      jj_consume_token(24);
      e2 = StrToken();
Parser.layerList.get(layerList.size() - 1).position = e2.toString();
          {if ("" != null) return new Str(e1.toString() + ":" + e2.toString());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("LayerPosition");
    }
}

  static final public Exp LayerHasCream() throws ParseException {
    trace_call("LayerHasCream");
    try {
Token e1; Exp e2;
      //	e1=<LAYERHASCREAM> "=" e2=StrToken() {Parser.layerKeyPairList.add(e1.toString() + ":" + e2.toString()); return new Str(e1.toString() + ":" + e2.toString());}
              e1 = jj_consume_token(LAYERHASCREAM);
      jj_consume_token(24);
      e2 = StrToken();
Parser.layerList.get(layerList.size() - 1).hasCream = e2.toString();
          {if ("" != null) return new Str(e1.toString() + ":" + e2.toString());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("LayerHasCream");
    }
}

  static final public Exp LayerDiameter() throws ParseException {
    trace_call("LayerDiameter");
    try {
Token e1; Exp e2;
      //	e1=<LAYERDIAMETER> "=" e2=StrToken() {Parser.layerKeyPairList.add(e1.toString() + ":" + e2.toString()); return new Str(e1.toString() + ":" + e2.toString());}
              e1 = jj_consume_token(LAYERDIAMETER);
      jj_consume_token(24);
      e2 = StrToken();
Parser.layerList.get(layerList.size() - 1).diameter = e2.toString();
          {if ("" != null) return new Str(e1.toString() + ":" + e2.toString());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("LayerDiameter");
    }
}

  static final public Exp LayerIngredient() throws ParseException {
    trace_call("LayerIngredient");
    try {
Token e1; Exp e2;
      //	e1=<LAYERINGREDIENT> "=" e2=StrToken() {Parser.layerKeyPairList.add(e1.toString() + ":" + e2.toString()); return new Str(e1.toString() + ":" + e2.toString());}
              e1 = jj_consume_token(LAYERINGREDIENT);
      jj_consume_token(24);
      e2 = StrToken();
Parser.layerList.get(layerList.size() - 1).ingredientList = e2.toString();
          {if ("" != null) return new Str(e1.toString() + ":" + e2.toString());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("LayerIngredient");
    }
}

  static final public Exp KeyPair() throws ParseException {
    trace_call("KeyPair");
    try {
Token e1; Exp e2;
      e1 = jj_consume_token(KEYWORD);
      jj_consume_token(24);
      e2 = StrToken();
Parser.keyPairList.add(e1.toString() + ":" + e2.toString()); {if ("" != null) return new Str(e1.toString() + ":" + e2.toString());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("KeyPair");
    }
}

  static final public Exp TopText() throws ParseException {
    trace_call("TopText");
    try {
Exp e1;
      jj_consume_token(KEYWORD);
      jj_consume_token(24);
      e1 = StrToken();
e1 = new TopText(e1);
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("TopText");
    }
}

  static final public Exp StringList() throws ParseException {
    trace_call("StringList");
    try {
Exp e1;
      jj_consume_token(9);
      label_3:
      while (true) {
        e1 = StrToken();
        jj_consume_token(25);
        if (jj_2_5(2)) {
          ;
        } else {
          break label_3;
        }
      }
      jj_consume_token(10);
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("StringList");
    }
}

  static final public Exp NumToken() throws ParseException {
    trace_call("NumToken");
    try {
Token t;
      t = jj_consume_token(NUM);
{if ("" != null) return new Num(Integer.parseInt(t.image));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("NumToken");
    }
}

  static final public Exp CharToken() throws ParseException {
    trace_call("CharToken");
    try {
Token t;
      t = jj_consume_token(CHAR);
{if ("" != null) return new Str(t.toString());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("CharToken");
    }
}

  static final public Exp StrToken() throws ParseException {
    trace_call("StrToken");
    try {
Token t;
      t = jj_consume_token(STRING);
{if ("" != null) return new Str(t.toString());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("StrToken");
    }
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_3R_6()
 {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3R_7()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  static private boolean jj_3_5()
 {
    if (jj_3R_7()) return true;
    if (jj_scan_token(25)) return true;
    return false;
  }

  static private boolean jj_3R_8()
 {
    if (jj_scan_token(LAYERPOSITION)) return true;
    if (jj_scan_token(24)) return true;
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3_3()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_1()) return false;
    jj_scanpos = xsp;
    if (jj_3_2()) return true;
    return false;
  }

  static private boolean jj_3R_5()
 {
    if (jj_scan_token(STRUCTKEYWORD)) return true;
    Token xsp;
    if (jj_3_4()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_4()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_4()
 {
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3R_4()
 {
    if (jj_scan_token(KEYWORD)) return true;
    if (jj_scan_token(24)) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {};
	}
  static final private JJCalls[] jj_2_rtns = new JJCalls[5];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  {
      enable_tracing();
  }
  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new ParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 0; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new ParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   if (++jj_gc > 100) {
		 jj_gc = 0;
		 for (int i = 0; i < jj_2_rtns.length; i++) {
		   JJCalls c = jj_2_rtns[i];
		   while (c != null) {
			 if (c.gen < jj_gen) c.first = null;
			 c = c.next;
		   }
		 }
	   }
	   trace_token(token, "");
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error {
    @Override
    public Throwable fillInStackTrace() {
      return this;
    }
  }
  static private final LookaheadSuccess jj_ls = new LookaheadSuccess();
  static private boolean jj_scan_token(int kind) {
	 if (jj_scanpos == jj_lastpos) {
	   jj_la--;
	   if (jj_scanpos.next == null) {
		 jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
	   } else {
		 jj_lastpos = jj_scanpos = jj_scanpos.next;
	   }
	 } else {
	   jj_scanpos = jj_scanpos.next;
	 }
	 if (jj_rescan) {
	   int i = 0; Token tok = token;
	   while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
	   if (tok != null) jj_add_error_token(kind, i);
	 }
	 if (jj_scanpos.kind != kind) return true;
	 if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
	 return false;
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	   trace_token(token, " (in getNextToken)");
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
  static private int[] jj_lasttokens = new int[100];
  static private int jj_endpos;

  static private void jj_add_error_token(int kind, int pos) {
	 if (pos >= 100) {
		return;
	 }

	 if (pos == jj_endpos + 1) {
	   jj_lasttokens[jj_endpos++] = kind;
	 } else if (jj_endpos != 0) {
	   jj_expentry = new int[jj_endpos];

	   for (int i = 0; i < jj_endpos; i++) {
		 jj_expentry[i] = jj_lasttokens[i];
	   }

	   for (int[] oldentry : jj_expentries) {
		 if (oldentry.length == jj_expentry.length) {
		   boolean isMatched = true;

		   for (int i = 0; i < jj_expentry.length; i++) {
			 if (oldentry[i] != jj_expentry[i]) {
			   isMatched = false;
			   break;
			 }

		   }
		   if (isMatched) {
			 jj_expentries.add(jj_expentry);
			 break;
		   }
		 }
	   }

	   if (pos != 0) {
		 jj_lasttokens[(jj_endpos = pos) - 1] = kind;
	   }
	 }
  }

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[26];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 0; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 26; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 jj_endpos = 0;
	 jj_rescan_token();
	 jj_add_error_token(0, 0);
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  static private int trace_indent = 0;
/** Enable tracing. */
  static final public void enable_tracing() {
	 trace_enabled = true;
  }

/** Disable tracing. */
  static final public void disable_tracing() {
	 trace_enabled = false;
  }

  static protected void trace_call(String s) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.println("Call:	" + s);
	 }
	 trace_indent = trace_indent + 2;
  }

  static protected void trace_return(String s) {
	 trace_indent = trace_indent - 2;
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.println("Return: " + s);
	 }
  }

  static protected void trace_token(Token t, String where) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.print("Consumed token: <" + tokenImage[t.kind]);
	   if (t.kind != 0 && !tokenImage[t.kind].equals("\"" + t.image + "\"")) {
		 System.out.print(": \"" + TokenMgrError.addEscapes(t.image) + "\"");
	   }
	   System.out.println(" at line " + t.beginLine + " column " + t.beginColumn + ">" + where);
	 }
  }

  static protected void trace_scan(Token t1, int t2) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.print("Visited token: <" + tokenImage[t1.kind]);
	   if (t1.kind != 0 && !tokenImage[t1.kind].equals("\"" + t1.image + "\"")) {
		 System.out.print(": \"" + TokenMgrError.addEscapes(t1.image) + "\"");
	   }
	   System.out.println(" at line " + t1.beginLine + " column " + t1.beginColumn + ">; Expected token: <" + tokenImage[t2] + ">");
	 }
  }

  static private void jj_rescan_token() {
	 jj_rescan = true;
	 for (int i = 0; i < 5; i++) {
	   try {
		 JJCalls p = jj_2_rtns[i];

		 do {
		   if (p.gen > jj_gen) {
			 jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
			 switch (i) {
			   case 0: jj_3_1(); break;
			   case 1: jj_3_2(); break;
			   case 2: jj_3_3(); break;
			   case 3: jj_3_4(); break;
			   case 4: jj_3_5(); break;
			 }
		   }
		   p = p.next;
		 } while (p != null);

		 } catch(LookaheadSuccess ls) { }
	 }
	 jj_rescan = false;
  }

  static private void jj_save(int index, int xla) {
	 JJCalls p = jj_2_rtns[index];
	 while (p.gen > jj_gen) {
	   if (p.next == null) { p = p.next = new JJCalls(); break; }
	   p = p.next;
	 }

	 p.gen = jj_gen + xla - jj_la; 
	 p.first = token;
	 p.arg = xla;
  }

  static final class JJCalls {
	 int gen;
	 Token first;
	 int arg;
	 JJCalls next;
  }

}

// Classes defining the Abstract Syntax Tree
abstract class Exp {

}

class Num extends Exp {
    int value;
    Num(int v) {value = v;}
    public String toString() {return value + "";}
}

class Str extends Exp {
    String value;
    Str(String v) {value = v;}
    public String toString() {return value;}
}

class TopText extends Exp {
        String txt;
        TopText(Exp text) { txt = text.toString();}
        public String toString()
        {
          return txt;
        }
}

class BinaryExp extends Exp {
    String op;
    Exp left, right;
    BinaryExp(String o, Exp l, Exp r) {op = o; left = l; right = r;}
    public String toString() {
                Parser.opGroup.add("(" + op + " " + left + " " + right + ")");
                return "(" + op + " " + left + " " + right + ")";
        }
}
